@@ -108,6 +108,10 @@ sub install ( $class, %config ) {
             },
         );
 
+        OpenTelemetry->propagator->inject( \my %carrier );
+        $options->{headers} = { %{ $options->{headers} // {} }, %carrier }
+            if %carrier;
+
         dynamically OpenTelemetry::Context->current
             = OpenTelemetry::Trace->context_with_span($span);
 
