@@ -5,6 +5,8 @@ Revision history for OpenTelemetry
     * Document OpenTelemetry->logger as deprecated, as this will soon
       be removed to make room for the implementation of the Logs API.
     * Apply default values appropriately when receiving undefined values
+    * The HTTP::Tiny and LWP::UserAgent integrations inject propagation
+      data as appropriate
 
 0.018     2023-11-23 19:28:38+00:00 Europe/London
 
